CI: use JDK 21 daemon and toolchains for matrix JDKs (#179)